--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     .modal-backdrop { backdrop-filter: blur(4px); }
     .kpi-bar { height:6px; border-radius:9999px; background:#f1f5f9; overflow:hidden }
     .kpi-bar>span { display:block; height:100%; background:#22c55e }
-    .muted { color:#6b7280 }
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
   </style>
 </head>
@@ -111,7 +110,7 @@
     <!-- Import -->
     <section id="import-section" class="section-content p-6 hidden">
       <h2 class="text-2xl font-semibold text-gray-900 mb-2">นำเข้าข้อมูลจาก iVMS4200-AC</h2>
-      <p class="text-gray-600 mb-6">อัปโหลดไฟล์ CSV/XLSX/XLS ที่ export จากระบบ iVMS4200-AC หรือไฟล์สรุปที่มีคอลัมน์ <span class="mono">Date, Check-in, Check-out</span></p>
+      <p class="text-gray-600 mb-6">อัปโหลดไฟล์ CSV/XLSX/XLS ที่มีคอลัมน์ <span class="mono">Person ID, Name, Department, Date, Check-In, Check-out</span></p>
       <div class="bg-white rounded-xl shadow-sm p-8 mb-6">
         <div id="uploadArea" class="border-2 border-dashed border-gray-300 rounded-lg p-12 text-center hover:border-blue-400 transition-colors cursor-pointer">
           <div class="mb-4"><i class="fas fa-cloud-upload-alt text-4xl text-gray-400"></i></div>
@@ -178,20 +177,34 @@
       setTimeout(() => t.remove(), 2400);
     }
     const clean = v => (v ?? '').toString().replace(/^'+/, '').trim() || null;
+    const isBlank = v => v == null || String(v).trim() === '' || String(v).trim() === '-';
 
-    // Parse time helpers
-    function toISO(v) { if (!v) return null; const d = new Date(v); return isNaN(d) ? null : d.toISOString(); }
-    function combineDateTime(dateStr, timeStr) {
-      if (!dateStr || !timeStr) return null;
-      // normalise e.g. '13/09/2025', '13-09-2025', '2025-09-13'
-      const d = new Date(dateStr);
-      if (isNaN(d)) return null;
-      // ensure time like '08:00' or '8:00' or '08:00:00'
-      const t = String(timeStr).trim();
-      const isoDate = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate())).toISOString().slice(0,10);
-      // keep as local time assumption  (no TZ math): build ISO string 'YYYY-MM-DDTHH:mm:ssZ' in UTC for consistency
-      const parts = t.split(':'); const h = parts[0]||'00', m = parts[1]||'00', s = parts[2]||'00';
-      return `${isoDate}T${h.padStart(2,'0')}:${m.padStart(2,'0')}:${s.padStart(2,'0')}Z`;
+    function parseDateSmart(s) {
+      if (!s) return null;
+      s = String(s).trim();
+      // yyyy-mm-dd
+      if (/^\d{4}-\d{1,2}-\d{1,2}$/.test(s)) {
+        const [y,m,d] = s.split('-').map(n => n.padStart(2,'0'));
+        return `${y}-${m}-${d}`;
+      }
+      // dd-mm-yy OR dd-mm-yyyy OR dd/mm/yy
+      let m = s.match(/^(\d{1,2})[-\/](\d{1,2})[-\/](\d{2}|\d{4})$/);
+      if (m) {
+        let [_, d, mo, y] = m;
+        if (y.length === 2) y = (Number(y) >= 70 ? '19' : '20') + y;
+        return `${y.padStart(4,'0')}-${mo.padStart(2,'0')}-${d.padStart(2,'0')}`;
+      }
+      // fallback
+      const d2 = new Date(s);
+      return isNaN(d2) ? null : d2.toISOString().slice(0,10);
+    }
+    function combineISO(dateISO, timeStr) {
+      if (!dateISO || isBlank(timeStr)) return null;
+      const parts = String(timeStr).trim().split(':');
+      const h = (parts[0]||'00').padStart(2,'0');
+      const m = (parts[1]||'00').padStart(2,'0');
+      const s = (parts[2]||'00').padStart(2,'0');
+      return `${dateISO}T${h}:${m}:${s}Z`;
     }
     function inferDirection(dir, dev) {
       const s = (dir ?? '').toString().toUpperCase();
@@ -234,28 +247,29 @@
       await refreshDashboard();
     });
 
-    // ====== Column map (both RAW logs & DAY summary) ======
+    // ====== Column map for the attached file ======
     const COLUMN_MAP = {
-      // RAW logs
-      timestamp: ['เวลา','Time','Datetime','DateTime','Event Time'],
-      emp_id:    ['รหัสพนักงาน','EmployeeID','CardNo','Emp','Person ID','PersonID','UserID','Employee Code','Emp No'],
-      name:      ['ชื่อ','Name','FullName','Full Name'],
-      dept:      ['แผนก','Department','Dept','Division'],
-      direction: ['ประเภท','Event','Direction','IN/OUT','Attendance Status','Status'],
-      device:    ['อุปกรณ์','Device','Door','Reader','Attendance Check Point','Custom Name','Device Name'],
-      // DAY summary
-      date:         ['Date','วันที่','Work Date','วันทำงาน'],
-      check_in:     ['Check-in','Check In','Time In','In','เวลาเข้า','Check-in Time','เวลาเข้างาน'],
-      check_out:    ['Check-out','Check Out','Time Out','Out','เวลาออก','Check-out Time','เวลาเลิกงาน'],
+      emp_id:    ['Person ID','Employee ID','EmployeeID','Emp No','Emp Code'],
+      name:      ['Name','Full Name','FullName'],
+      dept:      ['Department','Dept','Division'],
+      date:      ['Date','วันที่','Work Date'],
+      check_in:  ['Check-In','Check In','Time In','In','เวลาเข้า','Check-in'],
+      check_out: ['Check-out','Check Out','Time Out','Out','เวลาออก','Check-out Time']
+    };
+    // (รองรับโหมด RAW ด้วย เพื่อความยืดหยุ่น)
+    const RAW_MAP = {
+      timestamp: ['Time','Datetime','DateTime','Event Time','เวลา'],
+      direction: ['Direction','Event','IN/OUT','Attendance Status','Status'],
+      device:    ['Device','Door','Reader','Attendance Check Point','Custom Name','Device Name']
     };
 
-    let rowsToImport = [];     // flattened to raw_scans format
+    let rowsToImport = [];     // flattened as raw_scans rows
     let errorRows = [];
     let importRange = { from: null, to: null };
 
-    function resolveColumns(firstRow) {
+    function resolveColumns(firstRow, map) {
       const headers = Object.keys(firstRow || {});
-      return Object.fromEntries(Object.entries(COLUMN_MAP).map(([key, aliases]) => {
+      return Object.fromEntries(Object.entries(map).map(([key, aliases]) => {
         const found = headers.find(h => aliases.some(a => a.toLowerCase() === String(h).trim().toLowerCase()));
         return [key, found || null];
       }));
@@ -293,9 +307,8 @@
 
     function handleParsedRows(rawRows) {
       if (!rawRows?.length) { toast('ไม่พบข้อมูลในไฟล์', false); return; }
-      const cols = resolveColumns(rawRows[0]);
-
-      // DAY summary mode if we can find date + (check_in or check_out)
+      // ลองจับแบบ "รายวัน"
+      let cols = resolveColumns(rawRows[0], COLUMN_MAP);
       const isDayMode = !!(cols.date && (cols.check_in || cols.check_out));
 
       rowsToImport = []; errorRows = [];
@@ -306,25 +319,18 @@
           const employee_code = clean(r[cols.emp_id]);
           const full_name = clean(r[cols.name]);
           const department = clean(r[cols.dept]);
-          const dateStr = r[cols.date];
-          const inStr = r[cols.check_in];
-          const outStr = r[cols.check_out];
+          const dateISO = parseDateSmart(r[cols.date]);
+          const inIso  = combineISO(dateISO, r[cols.check_in]);
+          const outIso = combineISO(dateISO, r[cols.check_out]);
 
-          // update range
-          const d0 = new Date(dateStr);
-          if (!isNaN(d0)) {
-            const iso = d0.toISOString().slice(0,10);
-            minDate = (!minDate || iso < minDate) ? iso : minDate;
-            maxDate = (!maxDate || iso > maxDate) ? iso : maxDate;
+          if (dateISO) {
+            minDate = (!minDate || dateISO < minDate) ? dateISO : minDate;
+            maxDate = (!maxDate || dateISO > maxDate) ? dateISO : maxDate;
           }
-
           if (!employee_code) { errorRows.push({ reason:'missing_employee_code', row:r }); continue; }
 
-          const inIso  = combineDateTime(dateStr, inStr);
-          const outIso = combineDateTime(dateStr, outStr);
-
           if (!inIso && !outIso) {
-            // no scans -> will be counted as 'absent' by RPC via employees table
+            // ไม่มี check-in/out -> ให้ RPC นับ absent จากตาราง employees
             continue;
           }
           if (inIso) {
@@ -335,22 +341,22 @@
           }
         }
       } else {
-        // RAW mode as before
+        // ลองโหมด RAW logs
+        cols = { ...resolveColumns(rawRows[0], COLUMN_MAP), ...resolveColumns(rawRows[0], RAW_MAP) };
         for (const r of rawRows) {
-          const event_time = toISO(r[cols.timestamp]);
           const employee_code = clean(r[cols.emp_id]);
-          const full_name = clean(r[cols.name]);
-          const department = clean(r[cols.dept]);
-          const device = clean(r[cols.device]);
-          const direction = inferDirection(r[cols.direction], device);
+          const full_name     = clean(r[cols.name]);
+          const department    = clean(r[cols.dept]);
+          const event_time    = isBlank(r[RAW_MAP.timestamp?.[0]]) ? null : new Date(r[cols.timestamp] || r['Time']).toISOString();
+          const device        = clean(r[cols.device]);
+          const direction     = inferDirection(r[cols.direction], device) || 'IN';
 
           if (event_time) {
-            const d = new Date(event_time).toISOString().slice(0,10);
+            const d = event_time.slice(0,10);
             minDate = (!minDate || d < minDate) ? d : minDate;
             maxDate = (!maxDate || d > maxDate) ? d : maxDate;
           }
-
-          const row = { event_time, employee_code, full_name, department, direction: direction || 'IN', device };
+          const row = { event_time, employee_code, full_name, department, direction, device };
           if (!row.event_time || !row.employee_code) { errorRows.push({ reason: 'missing_time_or_emp', row: r }); continue; }
           rowsToImport.push(row);
         }
@@ -446,12 +452,11 @@
 
         // สถานะของวันล่าสุด
         const { data: dayRows } = await client.from('attendance_days')
-          .select('status,in_time,out_time')
+          .select('status,check_in,check_out')
           .eq('work_date', latestDay);
         const counts = { present:0, late:0, absent:0, missing_out:0 };
         (dayRows || []).forEach(r => counts[r.status] = (counts[r.status] || 0) + 1);
 
-        // ผู้ที่ไม่มี check-in ต้องเป็น absent -> logic อยู่ใน RPC แล้ว (กรณีไม่มี in_time/out_time จะ absent)
         const scanned = totalEmp ? (totalEmp - counts.absent) : (dayRows || []).length;
         const rate = totalEmp ? Math.round((scanned / totalEmp) * 100) : 0;
 
